--- a/header_MIDN.html
+++ b/header_MIDN.html
@@ -4,11 +4,11 @@
         <h5> Mid-Atlantic Network </h5>
         <h5> Inventory & Monitoring Program </h5>
         <br>
-        <h5> Forest Health Monitoring </h5></div>
+        <h5> Forest Monitoring Data Summary </h5></div>
     <div id="col-right-header">
         <img src="www/ah_small_flat_4c_blackbkgr_k100.svg" alt="arrowhead"></div>
     <div id="col-middle-header">
         <h5> National Park Service </h5>
         <h5> U.S. Department of the Interior </h5></div>
-  </div>
+    </div>
 </div>
