fixed typos and minor text edits

--- a/html_header.html
+++ b/html_header.html
@@ -21,6 +21,6 @@
         <h5> National Park Service </h5>
         <h5> U.S. Department of the Interior </h5>
         <br>
-        <h5> Fredericksburg & Spotsylvania <br> National Military Park </h5><br></div></div></div><br>
+        <h5> Appomattox Court House <br> National Historical Park </h5></div></div></div><br>
 </body>
 </html>
