--- a/html_header.html
+++ b/html_header.html
@@ -11,16 +11,16 @@
 <div class="banner">
   <div class="header">
     <div id="col-left-header">
-        <h5> Mid-Atlantic Network </h5>
+        <h5> Northeast Coastal and Barrier Network </h5>
         <h5> Inventory & Monitoring Division </h5>
         <br>
         <h5> Forest Monitoring Data Summary </h5></div>
     <div id="col-right-header">
-        <img src="www/ah_small_flat_4c_blackbkgr_k100.svg" alt="arrowhead"></div>
+        <img src="www/ah_small_flat_4c_blackbkgr_k100.svg" alt="arrowhead" height = "75px" width = "58px"></div>
     <div id="col-middle-header">
         <h5> National Park Service </h5>
         <h5> U.S. Department of the Interior </h5>
         <br>
-        <h5> Appomattox Court House <br> National Historical Park </h5></div></div></div><br>
+        <h5> Assateague Island National Seashore </h5></div></div></div><br>
 </body>
 </html>
